--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 
 * XMonad
 
-[Screenshot][https://user-images.githubusercontent.com/45176912/128553164-4c4e1fa1-e461-4de6-8649-81270bfe27ea.png]
+[[Screenshot][https://user-images.githubusercontent.com/45176912/128553164-4c4e1fa1-e461-4de6-8649-81270bfe27ea.png]]
 
 | *Shell*:     | zsh                                                |
 | *DM:*        | lightdm + lightdm-mini-greeter                     |
