--- a/README.org
+++ b/README.org
@@ -4,27 +4,29 @@
 
 [[Screenshot][https://user-images.githubusercontent.com/45176912/128553164-4c4e1fa1-e461-4de6-8649-81270bfe27ea.png]]
 
-| *Shell*:     | zsh                                                |
-| *DM:*        | lightdm + lightdm-mini-greeter                     |
-| *WM:*        | XMonad                                             |
-| *Panel:*     | XMobar                                             |
-| *Editor:*    | Emacs                                              |
-| *Terminal:*  | alacritty                                          |
-| *Launcher:*  | XMonad.Prompt                                      |
-| *Browser:*   | firefox                                            |
-| *GTK Theme:* | [Materia][https://github.com/nana-4/materia-theme] |
+| *Shell*:       | zsh                                                              |
+| *DM:*          | lightdm + lightdm-mini-greeter                                   |
+| *WM:*          | XMonad                                                           |
+| *Panel:*       | XMobar                                                           |
+| *Colorscheme:* | [[Kaolin dark][https://github.com/alternateved/kaolin-inspired]] |
+| *Editor:*      | Emacs                                                            |
+| *Terminal:*    | alacritty                                                        |
+| *Launcher:*    | XMonad.Prompt                                                    |
+| *Browser:*     | firefox                                                          |
+| *GTK Theme:*   | [[Materia][https://github.com/nana-4/materia-theme]]             |
 
 * BSPWM
 
-| *Shell*:     | zsh                                                |
-| *DM:*        | lightdm + lightdm-mini-greeter                     |
-| *WM:*        | BSPWM                                              |
-| *Panel:*     | Polybar                                            |
-| *Editor:*    | Emacs                                              |
-| *Terminal:*  | alacritty                                          |
-| *Launcher:*  | dmenu with patches                                 |
-| *Browser:*   | firefox                                            |
-| *GTK Theme:* | [Materia][https://github.com/nana-4/materia-theme] |
+| *Shell*:       | zsh                                                     |
+| *DM:*          | lightdm + lightdm-mini-greeter                          |
+| *WM:*          | BSPWM                                                   |
+| *Panel:*       | Polybar                                                 |
+| *Colorscheme:* | [[Modus Themes][https://protesilaos.com/modus-themes/]] |
+| *Editor:*      | Emacs                                                   |
+| *Terminal:*    | alacritty                                               |
+| *Launcher:*    | dmenu with patches                                      |
+| *Browser:*     | firefox                                                 |
+| *GTK Theme:*   | [[Materia][https://github.com/nana-4/materia-theme]]    |
 
 
 I try to keep my nixos configuration clean, therefore all my archived configuration files can be found [here](https://github.com/alternateved/dotfiles).
