--- a/README.org
+++ b/README.org
@@ -8,12 +8,12 @@
 | *DM:*          | lightdm + lightdm-mini-greeter                                   |
 | *WM:*          | XMonad                                                           |
 | *Panel:*       | XMobar                                                           |
-| *Colorscheme:* | [[Kaolin dark][https://github.com/alternateved/kaolin-inspired]] |
+| *Colorscheme:* | [[https://github.com/alternateved/kaolin-inspired][Kaolin dark]] |
 | *Editor:*      | Emacs                                                            |
 | *Terminal:*    | alacritty                                                        |
 | *Launcher:*    | XMonad.Prompt                                                    |
 | *Browser:*     | firefox                                                          |
-| *GTK Theme:*   | [[Materia][https://github.com/nana-4/materia-theme]]             |
+| *GTK Theme:*   | [[https://github.com/nana-4/materia-theme][Materia]]             |
 
 * BSPWM
 
@@ -21,12 +21,12 @@
 | *DM:*          | lightdm + lightdm-mini-greeter                          |
 | *WM:*          | BSPWM                                                   |
 | *Panel:*       | Polybar                                                 |
-| *Colorscheme:* | [[Modus Themes][https://protesilaos.com/modus-themes/]] |
+| *Colorscheme:* | [[https://protesilaos.com/modus-themes/][Modus Themes]] |
 | *Editor:*      | Emacs                                                   |
 | *Terminal:*    | alacritty                                               |
 | *Launcher:*    | dmenu with patches                                      |
 | *Browser:*     | firefox                                                 |
-| *GTK Theme:*   | [[Materia][https://github.com/nana-4/materia-theme]]    |
+| *GTK Theme:*   | [[https://github.com/nana-4/materia-theme][Materia]]   |
 
 * Disclaimer
 
