--- a/README.org
+++ b/README.org
@@ -32,8 +32,8 @@
 
 * Flakes that inspired me
 
-** [[https://github.com/erikbackman/nixos-config][erikbackman flake]]
-** [[https://github.com/hlissner/dotfiles][hlissner flake]] 
+- [[https://github.com/erikbackman/nixos-config][erikbackman flake]]
+- [[https://github.com/hlissner/dotfiles][hlissner flake]] 
 
 * Disclaimer
 
