--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 #+TITLE: My NixOS configuration
 
+*UPDATE 2022-01-02*: I no longer use NixOS for desktop.
+
 * XMonad
 
 [[Screenshot][https://user-images.githubusercontent.com/45176912/128553164-4c4e1fa1-e461-4de6-8649-81270bfe27ea.png]]
